Fixed word wrap in code blocks.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -247,6 +247,7 @@ code {
 }
 
 .highlight pre {
+  overflow-wrap: break-word;
   padding: 10px;
   font-size: var(--font-size-small);
 }
